Fixed some layout issues on the home page

--- a/app/assets/stylesheets/ui/thumbs/generic.css
+++ b/app/assets/stylesheets/ui/thumbs/generic.css
@@ -37,3 +37,6 @@ ul.vertical li.generic {
   }
 }
 
+tr.activity td + td {
+  width: 100%;
+}
